# Pexon

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  docker-compose.yaml  main.py  requirements.txt  setup.cfg  todos.json
.github/ISSUE_TEMPLATE/: bug_report.md
core/: crud.py
data/: config.py  database.py
model/: model.py  todo.py  user.py
model/.main/: Activation.rb  asci.rb
routers/: __init__.py  login.py  signup.py  todo.py  user.py
schema/: hash.py  jwt.py  schemas.py  todo.py  token.py  user.py
