[metadata]
name = Pexon-Rest-API
version = 1.0
description = A full Rest-API for JSON response included Docker Contains.
long_description = file: README.md, LICENSE.md
keywords = one, two
license = MIT License
classifiers =
    Framework :: FastAPI
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8.5
    Programming Language :: Python :: 3.8.6

[flake8]
max-line-length = 180